tests/integration/snapshots/integration__conformance__y_number.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[123e65]
stdout ---
[
    123e65
]

stderr ---
