tests/integration/snapshots/integration__conformance__y_number_0e+1.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[0e+1]
stdout ---
[0e1]

stderr ---
