tests/integration/snapshots/integration__conformance__y_number_0e+1.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[0e+1]
stderr ---
