tests/integration/snapshots/integration__conformance__y_number_after_space.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[ 4]
stdout ---
[
  4
]

stderr ---
