tests/integration/snapshots/integration__conformance__y_number_double_close_to_zero.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[-0.000000000000000000000000000000000000000000000000000000000000000000000000000001]

stdout ---
[-0.000000000000000000000000000000000000000000000000000000000000000000000000000001]

stderr ---
